adc sidebar com link funcionando

--- a/home.html
+++ b/home.html
@@ -90,67 +90,76 @@
             </div>
           </li>
           <div class="mb">
-              <li class="mb-1">
-                <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-                  <div class="set1">
-                    <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
-                    <li><a href="orders.html" class="link-dark rounded">Encomendas</a></li>
-                  </div>
-                </button>
-              </li>
-              <li class="mb-1">
-                <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-                  <div class="set1">
-                    <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
-                    <li><a href="historic.html" class="link-dark rounded">Histórico</a></li>
-                  </div>
-                </button>
-              </li>
-              <li class="mb-1">
-                  <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-                  <div class="set1">
-                    <li><a href="settings.html" class="link-dark rounded">Configurações</a></li>
-                  </div>
-                  <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
-                </button>
-              </li>
-              <li class="mb-1">
-                <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-                  <div class="set1">
-                    <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
-                    <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
-                  </div>
-                </button>
-              </li>  
-    </ul>
-</section>
-          
-<!--Barra de alerta-->
-<section class="content-table">
-  <header class="bar-status">
-    <div class="welcome">    
-      <h1 id="hello">Olá Taila,</h1>
-      <h1>seja bem-vinda(o)!</h1>
-    </div>
-    <ul class="bar-login">
-      <li id="usuario">
-        <div class="btn-group">
-          <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none " type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
-              <h6 id="user">
-                Taila Santos
-              </h6>
-          </button>
-          <ul class="dropdown-menu">
-            <li>
-              <a href="settings_user.html">Configurações
-              <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
-             </a>
+            <li class="mb-1">
+              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                <div class="set1">
+                  <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
+                  <li><a href="orders.html" class="link-dark rounded">Encomendas</a></li>
+                </div>
+              </button>
             </li>
-            <li>
-              <a href="index.html">Sair
-              <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
-              </a> 
+          </div>
+          <div class="mb">
+            <li class="mb-1">
+              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                <div class="set1">
+                  <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
+                  <li><a href="historic.html" class="link-dark rounded">Histórico</a></li>
+                </div>
+              </button>
+            </li>
+          </div>
+          <div class="mb">
+            <li class="mb-1">
+              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                <div class="set1">
+                  <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
+                  <li><a href="settings.html" class="link-dark rounded">Configurações</a></li>
+                </div>
+              </button>
+            </li>
+          </div>
+          <div class="mb">
+            <li class="mb-1">
+              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                <div class="set1">
+                  <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
+                  <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
+                </div>
+              </button>
+            </li>
+          </div>
+        </ul>
+      </section>
+          
+      <!--Barra de alerta-->
+      <section class="content-table">
+        <header class="bar-status">
+          <div class="welcome">    
+            <h1 id="hello">Usuários</h1>            
+          </div>
+          <ul class="bar-login">
+            <li id="usuario">
+              <div class="btn-group">
+                <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
+                    <h6 id="user">
+                      Taila Santos
+                    </h6>
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="settings_user.html">Configurações
+                    <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
+                    </a>
+                  </li>
+                  <li>
+                    <a href="index.html">Sair
+                    <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
+                    </a> 
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </header>
