--- a/reports_product.html
+++ b/reports_product.html
@@ -157,7 +157,7 @@
         </header>
 
         <section class="report">
-          <h2>Relatórios</h2>
+          <h2>Relatório de produtos</h2>
           <div class="graphics-double">  
             <canvas id="grafico"></canvas>
             <canvas id="grafico2"></canvas> 
