Botao de deletar funcionando e reload na tela de cadastro de producao

--- a/user_registration.html
+++ b/user_registration.html
@@ -17,9 +17,11 @@
   <script src="script/database/database-connection.js"></script>
 </head>
 <body>
+  <!-- LOADING -->
   <div class="loader">
     <img src="images/833.gif" alt="Loading..." />
   </div>
+
   <div class="content">
     <div id="home">
     <div class="centro">
@@ -218,9 +220,9 @@
                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body modal-dialog modal-lg">
-                                  <img src="images/GREEN-checked.png" alt="">
-                                  <h1>Usuário cadastrado com sucesso!</h1>
-                                  <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
+                            <img src="images/GREEN-checked.png" alt="">
+                            <h1>Usuário cadastrado com sucesso!</h1>
+                            <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
                           </div>
                       </div>
                   </div>
