--- a/user_management.html
+++ b/user_management.html
@@ -19,10 +19,11 @@
 
 </head>
 <body>
+
   <div class="loader">
     <img src="images/833.gif" alt="Loading..." />
   </div>
-  <!-- <div id="teste"></div> -->
+  
   <div class="content">
     <div id="home">
     <div class="centro">
@@ -188,8 +189,95 @@
     </div>
   </div> 
 </div>
+
+  <!-- MODAL -->
+  <div id="modal-see" class="container">
+    <div class="mod">
+      <button class="fechar">x</button>
+      <h5 style="text-align: center;">Visualizar Produto</h5>
+      <form>
+        <h5>Nome</h5>
+        <input type="text" name="" id="nome-pro" disabled>
+        <h5>Sobrenome</h5>
+        <input type="text" name="" id="" disabled>
+        <h5>Usuário</h5>
+        <input type="text" name="" id="" disabled>
+      </form>
+    </div>
+  </div>
+
+  <div id="modal-edit" class="container">
+    <div class="mod">
+      <button class="fechar">x</button>
+      <h5 style="text-align: center;">Editar Produto</h5>
+      <form>
+        <h5>Nome</h5>
+        <input type="text" name="" id="nome" disabled>
+        <h5>Tipo</h5>
+        <input type="text" name="" id="sobrenome" disabled>
+        <h5>Valor</h5>
+        <input type="text" name="" id="nomeusuario" disabled>
+      </form>
+    </div>
+  </div>
+
+  <div id="modal-delete" class="container">
+    <div class="mod">
+      <button class="fechar">x</button>
+      <h4 style="text-align: center;">Deletar o usuario</h4>
+      <form>
+        <button>Sim</button>
+        <button>Não</button>
+      </form>
+    </div>
+  </div>
+
+  <script>
+    
+    function iniciaModal(modalID) {
+      const modal = document.getElementById(modalID);
+      if(modal){
+          modal.classList.add('mostrar');
+
+          modal.addEventListener("click", (e) => {
+          if(e.target.id == modalID || e.target.className == 'fechar'){
+            modal.classList.remove('mostrar');
+          }
+        })
+      }
+      if(modalID == "modal-see"){
+        this.funcmodalsee();
+      }
+    }
+
+    function funcmodalsee(dados){
+      const firebaseref = firebase.database().ref("user");
+      firebaseref.once('value',(resultado)=>{
+
+        resultado.forEach(element => {
+
+          if(element.child("username").val() == dados) {
+
+            document.getElementById("nome").value = element.val().firstname;
+            document.getElementById("sobrenome").value = element.val().lastname;
+            document.getElementById("nomedeusuario").value = element.val().username;
+            document.getElementById("email").value = element.val().email;
+            document.getElementById("office").value = element.val().job;
+            document.getElementById("access").value = element.val().acesslevel;
+
+          }
+              
+        });
+
+      })
+
+    }
+
+  </script>
+
   <script src="script/preloader.js"></script>
   <script type="module" src="script/user_management.js"></script>
   <script type="module" src="script/modal.js"></script>
+
 </body>
 </html>
