Validacao antes de excluir

--- a/user_management.html
+++ b/user_management.html
@@ -260,7 +260,16 @@
 
   <div id="modal-delete" class="container">
     <div class="mod">
-      <h4 style="text-align: center;">Usuário Deletado</h4>
+      <h4 style="text-align: center;">Deletar Usuário</h4>
+
+      <form>
+        <h3>Tem certeza que deseja deletar a produção?</h3>
+
+        <button type="button" id="confirm">SIM</button>
+        <button type="button" class="fechar">NÃO</button>
+
+      </form>
+
     </div>
   </div>
 
