--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="script/database/database-connection.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <link rel="icon" href="./images/y.png" sizes="any">
 </head>
 <body>
 <div class="container">
