--- a/production_registration.html
+++ b/production_registration.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <title>SysUnity</title>
@@ -15,11 +16,16 @@
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
   <script src="script/database/database-connection.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 </head>
+
 <body>
+
+  <!-- LOADING -->
   <div class="loader">
     <img src="images/833.gif" alt="Loading..." />
   </div>
+
   <div class="content">
     <div id="home">
     <div class="centro">
@@ -236,7 +242,25 @@
       </div>
   </div> 
 </div>
+
+<div id="modal-note" class="container">
+  <div class="mod">
+    <h4 style="text-align: center;">Deletar Usuário</h4>
+
+    <form>
+      <h5>Você deseja imprimir um bilhete?</h5>
+
+      <button type="button" id="confirm">SIM</button>
+      <button type="button" class="fechar">NÃO</button>
+
+    </form>
+
+  </div>
+</div>
+
 <script src="script/preloader.js"></script>
 <script type="module" src="script/production_registration.js"></script>
+
 </body>
+
 </html>
