Consertado erro ortografico nas sidebars das telas

--- a/prop.html
+++ b/prop.html
@@ -39,8 +39,8 @@
                 </button>
                 <div class="collapse" id="home-collapse">
                   <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="user_registration.html" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
-                    <li><a href="user_management.html" class="link-dark rounded">Gerenciar usuário</a></li>
+                    <li><a href="user_registration.html" class="link-dark rounded">Cadastrar usuários</a></li>
+                    <li><a href="user_management.html" class="link-dark rounded">Gerenciar usuários</a></li>
                   </ul>
                 </div>
               </li>
