--- a/sale_registration.html
+++ b/sale_registration.html
@@ -41,10 +41,8 @@
               </button>
               <div class="collapse" id="home-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                  <li><a href="user_registration.html" class="link-dark rounded">
-                      <p>Cadastrar usuário</p>
-                    </a></li>
-                  <li><a href="user_management.html" class="link-dark rounded">Gerenciar usuário</a></li>
+                  <li><a href="user_registration.html" class="link-dark rounded">Cadastrar usuários</a></li>
+                  <li><a href="user_management.html" class="link-dark rounded">Gerenciar usuários</a></li>
                 </ul>
               </div>
             </li>
@@ -308,6 +306,7 @@
   </div>
 </div> 
 </div>
+<script src="script/preloader.js"></script>
 <script type="module" src="script/sale_registration.js"></script>
 </body>
 </html>
