--- a/user_management.html
+++ b/user_management.html
@@ -234,47 +234,72 @@
   <div id="modal-edit" class="container">
 
     <div class="mod">
-
-      <button class="fechar">x</button>
-      <h5 style="text-align: center;">Editar Usuário</h5>
+      <div class="top-modal">
+      <h5>Editar Usuário</h5>
+      <button class="fechar"></button>
+    </div>
 
       <form>
-
-        <h5>Nome</h5>
-        <input type="text" id="Nome" placeholder="">
-
-        <h5>Sobrenome</h5>
-        <input type="text" id="Sobrenome" placeholder="">
-
-        <h5>Usuário</h5>
-        <input type="text" id="Nomedeusuario" placeholder="">
-
-        <h5>Email</h5>
-        <input type="text" id="Email" placeholder="">
-
-        <h5>Cargo</h5>
-        <input type="text" id="Office" placeholder="">
-
-        <h5>Acesso</h5>
-        <input type="text" id="Access" placeholder="">
-
-        <button id="btn_salvar" type="button">SALVAR</button>
-
-      </form>
+        <div class="user-email">
+          <label for="">Nome
+            <input id="nome" type="text" placeholder="">
+            <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
+          </label>
+          <label for="">Sobrenome
+            <input id="sobrenome" type="text" placeholder="">
+            <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
+          </label>
+        </div>
+        <div class="user-email">
+          <label for="">Usuário
+            <input id="nomedeusuario" type="text" placeholder="">
+            <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
+          </label>
+          <label for="">Email
+            <input id="email" type="text" placeholder="">
+            <p id="msgErro4" style="display: none;">O Campo precisa ser preenchido</p>
+          </label>
+        </div>
+        <div class="office-access">   
+          <label for="">Cargo
+            <select id="office">
+              <div class="dropdown-menu">
+                <option value="proprietario">Proprietário</option>
+                <option value="vendedor">Vendedor</option>
+              </div>
+            </select>
+          </label>
+          <label for="">Nivel de acesso
+            <select id="access">
+              <option value="administrador">Administrador</option>
+              <option value="gerenciador">Gerenciador</option>
+              <option value="visualizador">Visualizador</option>
+            </select>
+          </label> 
+        </div>
+        <div class="save">
+          <div class="btn-group">
+            <button class="btn btn-primary" id="btn_salvar" type="button">SALVAR</button>
+          </div>
+      </div>
+    </form>
 
     </div>
   </div>
 
   <div id="modal-delete" class="container">
     <div class="mod">
-      <h4 style="text-align: center;">Deletar Usuário</h4>
+      <div class="top-modal">
+        <h5>Deletar Usuário</h5>
+        <button class="fechar"></button>
+      </div>
 
       <form>
-        <h3>Tem certeza que deseja deletar a produção?</h3>
-
-        <button type="button" id="confirm">SIM</button>
-        <button type="button" class="fechar">NÃO</button>
-
+        <h3 style="color:black">Tem certeza que deseja deletar esse usuário?</h3>
+        <div class="alternative">
+          <button type="button" class="btn btn-primary">SIM</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">NÃO</button>
+        </div>
       </form>
 
     </div>
