Background do modal funcionando

--- a/user_management.html
+++ b/user_management.html
@@ -193,7 +193,7 @@
 </div>
 
   <!-- MODAL -->
-  <div id="modal-see" class="container">
+  <div id="modal-see" class="loader2">
 
     <div class="mod">
 
@@ -225,7 +225,7 @@
     </div>
   </div>
 
-  <div id="modal-edit" class="container">
+  <div id="modal-edit" class="loader2">
 
     <div class="mod">
 
@@ -259,7 +259,7 @@
     </div>
   </div>
 
-  <div id="modal-delete" class="container">
+  <div id="modal-delete" class="loader2">
     <div class="mod">
       <h4 style="text-align: center;">Deletar Usuário</h4>
 
