--- a/user_management.html
+++ b/user_management.html
@@ -192,7 +192,7 @@
   </div> 
 </div>
 
-  <!-- MODAL -->
+  <!-- MODAL DE VISUALZAR -->
   <div id="modal-see" class="loader2">
 
     <div class="mod">
@@ -223,7 +223,7 @@
           <input id="office" type="text" placeholder="" disabled/>
         </label>
         <label for="">Nivel de acesso
-          <input id="acess" type="text" placeholder="" disabled/>
+          <input id="access" type="text" placeholder="" disabled/>
         </label> 
       </div>
     </form>
@@ -231,6 +231,7 @@
     </div>
   </div>
 
+  <!-- MODAL DE EDITAR -->
   <div id="modal-edit" class="loader2">
 
     <div class="mod">
@@ -242,27 +243,27 @@
       <form>
         <div class="user-email">
           <label for="">Nome
-            <input id="nome" type="text" placeholder="">
+            <input id="nome2" type="text" placeholder="">
             <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
           </label>
           <label for="">Sobrenome
-            <input id="sobrenome" type="text" placeholder="">
+            <input id="sobrenome2" type="text" placeholder="">
             <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
           </label>
         </div>
         <div class="user-email">
           <label for="">Usuário
-            <input id="nomedeusuario" type="text" placeholder="">
+            <input id="nomedeusuario2" type="text" placeholder="">
             <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
           </label>
           <label for="">Email
-            <input id="email" type="text" placeholder="">
+            <input id="email2" type="text" placeholder="">
             <p id="msgErro4" style="display: none;">O Campo precisa ser preenchido</p>
           </label>
         </div>
         <div class="office-access">   
           <label for="">Cargo
-            <select id="office">
+            <select id="office2">
               <div class="dropdown-menu">
                 <option value="proprietario">Proprietário</option>
                 <option value="vendedor">Vendedor</option>
@@ -270,7 +271,7 @@
             </select>
           </label>
           <label for="">Nivel de acesso
-            <select id="access">
+            <select id="access2">
               <option value="administrador">Administrador</option>
               <option value="gerenciador">Gerenciador</option>
               <option value="visualizador">Visualizador</option>
@@ -287,6 +288,7 @@
     </div>
   </div>
 
+  <!-- MODAL DE DELETAR -->
   <div id="modal-delete" class="loader2">
     <div class="mod">
       <div class="top-modal">
@@ -297,14 +299,15 @@
       <form>
         <h3 style="color:black">Tem certeza que deseja deletar esse usuário?</h3>
         <div class="alternative">
-          <button type="button" class="btn btn-primary">SIM</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">NÃO</button>
+          <button type="button" class="btn btn-primary" id="confirm">SIM</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="deny">NÃO</button>
         </div>
       </form>
 
     </div>
   </div>
 
+  <!-- SCRIPTS -->
   <script src="script/preloader.js"></script>
   <script type="module" src="script/user_management.js"></script>
   <script type="module" src="script/modal.js"></script>
