Arrumando um pouco do backend para os modais

--- a/production_management.html
+++ b/production_management.html
@@ -177,6 +177,7 @@
               </li>
             </ul>
           </header>
+
           <!--Título da tela-->
           <section class="section-title" id="a">
             <h2 >Gerenciamento da produção</h2>
@@ -196,6 +197,7 @@
               <tbody id="tablebody"></tbody>
             </table>       
           </section>
+
           <!-- <section class="section-table">
             <table id="myTable" class="table">
               <thead>
@@ -391,7 +393,22 @@
     </div>
   </div>
 
-  <!-- Chamada dos scripts -->
+  <!-- MODAL DE VISUALZAR -->
+  <div id="modal-see" class="loader2">
+
+  </div>
+
+  <!-- MODAL DE EDITAR -->
+  <div id="modal-edit" class="loader2">
+
+  </div>
+
+  <!-- MODAL DE DELETAR -->
+  <div id="modal-delete" class="loader2">
+    
+  </div>
+
+  <!-- SCRIPTS -->
   <script type="module" src="./script/production_management.js"></script>
   <script src="script/preloader.js"></script>
   <script type="module" src="script/modal.js"></script>
