--- a/product_management.html
+++ b/product_management.html
@@ -193,43 +193,87 @@
 
   <!-- MODAL -->
   <div id="modal-see" class="container">
+
     <div class="mod">
-      <button class="fechar">x</button>
-      <h5 style="text-align: center;">Visualizar Produto</h5>
-      <form>
-        <h5>Nome</h5>
-        <input type="text" name="" id="nome-pro" disabled>
-        <h5>Tipo</h5>
-        <input type="text" name="" id="" disabled>
-        <h5>Valor</h5>
-        <input type="text" name="" id="" disabled>
-      </form>
+      <div class="top-modal">
+      <h5>Visualizar Produto</h5>
+      <button class="fechar"></button>
+    </div>
+      
+    <form>
+      <div class="name">
+        <label for="">Nome
+          <input id="nome" type="text" placeholder="" disabled/>
+        </label>
+      </div>
+      <div class="flavors">
+        <label for="">Sabores
+          <input id="flavor1" type="text" placeholder="" disabled/>
+          <input id="flavor2" type="text" placeholder="" disabled/>
+        </label> 
+        <div class="values">
+          <label for="">Valor
+            <input id="value1" type="text" placeholder="" disabled/>
+            <input id="value2" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+      </div>
+    </form>
+
     </div>
   </div>
 
   <div id="modal-edit" class="container">
+
     <div class="mod">
-      <button class="fechar">x</button>
-      <h5 style="text-align: center;">Editar Produto</h5>
-      <form>
-        <h5>Nome</h5>
-        <input type="text" name="" id="nome-pro" disabled>
-        <h5>Tipo</h5>
-        <input type="text" name="" id="" disabled>
-        <h5>Valor</h5>
-        <input type="text" name="" id="" disabled>
-      </form>
+      <div class="top-modal">
+      <h5>Editar Produto</h5>
+      <button class="fechar"></button>
+    </div>
+
+    <form>
+      <div class="name">
+        <label for="">Nome
+          <input id="nome" type="text" placeholder="" disabled/>
+        </label>
+      </div>
+      <div class="flavors">
+        <label for="">Sabores
+          <input id="flavor1" type="text" placeholder="" disabled/>
+          <input id="flavor2" type="text" placeholder="" disabled/>
+        </label> 
+        <div class="values">
+          <label for="">Valor
+            <input id="value1" type="text" placeholder="" disabled/>
+            <input id="value2" type="text" placeholder="" disabled/>
+          </label>
+        </div>
+      </div>
+      <div class="save">
+        <div class="btn-group">
+          <button class="btn btn-primary" id="btn_salvar" type="button">SALVAR</button>
+        </div>
+      </div>
+    </form>
+
     </div>
   </div>
 
   <div id="modal-delete" class="container">
     <div class="mod">
-      <button class="fechar">x</button>
-      <h4 style="text-align: center;">Deletar o produto</h4>
+      <div class="top-modal">
+        <h5>Deletar Produto</h5>
+        <button class="fechar"></button>
+      </div>
+
       <form>
-        <button>Sim</button>
-        <button>Não</button>
+        <h3 style="color:black">Tem certeza que deseja deletar esse produto?</h3>
+        <div class="alternative">
+          <button type="button" class="btn btn-primary">SIM</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">NÃO</button>
+        </div>
       </form>
+
     </div>
   </div>
 
