Modais de visualizar e editar 70%

--- a/product_management.html
+++ b/product_management.html
@@ -206,20 +206,24 @@
     
   <form>
     <div class="name">
+
       <label for="">Nome
         <input id="nome" type="text" placeholder="" disabled/>
       </label>
+
     </div>
     <div class="flavors">
-      <label for="">Sabores
-        <input id="flavor1" type="text" placeholder="" disabled/>
-        <input id="flavor2" type="text" placeholder="" disabled/>
+
+      <label for="" id="sab">Sabores
+        
       </label> 
+
       <div class="values">
+
         <label for="">Valor
           <input id="value1" type="text" placeholder="" disabled/>
-          <input id="value2" type="text" placeholder="" disabled/>
         </label>
+
       </div>
     </div>
   </form>
@@ -238,20 +242,23 @@
 
   <form>
     <div class="name">
+
       <label for="">Nome
         <input id="nome2" type="text" placeholder="" disabled/>
       </label>
+
     </div>
     <div class="flavors">
-      <label for="">Sabores
-        <input id="flavor1" type="text" placeholder="" disabled/>
-        <input id="flavor2" type="text" placeholder="" disabled/>
+
+      <label for="" id="sab2">Sabores
+
       </label> 
       <div class="values">
+
         <label for="">Valor
-          <input id="value1" type="text" placeholder="" disabled/>
-          <input id="value2" type="text" placeholder="" disabled/>
+          <!-- <input id="value1" type="text" placeholder="" disabled/> -->
         </label>
+
       </div>
     </div>
     <div class="save">
