--- a/user_registration.html
+++ b/user_registration.html
@@ -21,7 +21,6 @@
   <div class="loader">
     <img src="images/833.gif" alt="Loading..." />
   </div>
-
   <div class="content">
     <div id="home">
     <div class="centro">
@@ -29,7 +28,7 @@
         <ul class="list-unstyled ps-0">
           <li class="mb-1">
             <div class="sidebar-logo">
-              <h6><a href="home.html" id="home">SysUnity</a></h6>
+              <h6><a href="home.html" id="home"> SysUnity</a></h6>
             </div>
           </li>
           <li class="mb-1">
@@ -41,8 +40,8 @@
             </button>
             <div class="collapse" id="home-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a href="user_registration.html" class="link-dark rounded">Cadastrar usuários</a></li>
-                <li><a href="user_management.html" class="link-dark rounded">Gerenciar usuários</a></li>
+                <li><a href="user_registration.html" class="link-dark rounded">Cadastro de usuários</a></li>
+                <li><a href="user_management.html" class="link-dark rounded">Gerenciamento de usuários</a></li>
               </ul>
             </div>
           </li>
@@ -55,8 +54,8 @@
             </button>
             <div class="collapse" id="dashboard-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a href="sale_registration.html" class="link-dark rounded">Cadastrar vendas</a></li>
-                <li><a href="sale_management.html" class="link-dark rounded">Gerenciar vendas</a></li>
+                <li><a href="sale_registration.html" class="link-dark rounded">Cadastro de vendas</a></li>
+                <li><a href="sale_management.html" class="link-dark rounded">Gerenciamento de vendas</a></li>
               </ul>
             </div>
           </li>
@@ -69,10 +68,10 @@
             </button>
             <div class="collapse" id="orders-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a href="product_registration.html" class="link-dark rounded">Cadastrar produtos</a></li>
-                <li><a href="production_registration.html" class="link-dark rounded">Cadastrar nova produção</a></li>
-                <li><a href="product_management.html" class="link-dark rounded">Gerenciar produtos</a></li>
-                <li><a href="production_management.html" class="link-dark rounded">Gerenciar produção</a></li>
+                <li><a href="product_registration.html" class="link-dark rounded">Cadastro de produtos</a></li>
+                <li><a href="production_registration.html" class="link-dark rounded">Cadastro de nova produção</a></li>
+                <li><a href="product_management.html" class="link-dark rounded">Gerenciamento de produtos</a></li>
+                <li><a href="production_management.html" class="link-dark rounded">Gerenciamento de produção</a></li>
               </ul>
             </div>
           </li>
