correção do titulo

--- a/reports_product.html
+++ b/reports_product.html
@@ -164,7 +164,7 @@
         </header>
 
         <section class="report">
-          <h2>Relatório de produtos</h2>
+          <h2>Relatórios de produtos</h2>
           <div class="graphics-double">  
             <canvas id="grafico"></canvas>
             <canvas id="grafico2"></canvas> 
