correção gramatical e retirada da div form

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -165,7 +165,7 @@
           </ul>
         </header>
         <section class="registration">
-            <h2>Cadastro de Venda</h2>
+            <h2>Cadastro de Vendas</h2>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                   <button class="nav-link" id="product-tab" data-bs-toggle="tab" data-bs-target="#product" type="button" role="tab" aria-controls="product" aria-selected="false">Produtos</button>
@@ -246,17 +246,7 @@
               </div>
             </div>
             <div class="tab-pane fade" id="payment" role="tabpanel" aria-labelledby="payment-tab">
-              <div class="form">
-                <h5 class="sale">Tipo de Venda</h5>
-              <div class="public-order">
-                <label>
-                  <input type="radio" name="question" id="public2" value="geral">Geral
-                </label>
-                <label>
-                  <input type="radio" name="question" id="order2" value="encomenda">Encomenda
-                </label>
-              </div>
-            </div>
+
             <div class="form">
               <div class="discount-general" id="boxdiscount-general">
                 <label>Desconto
