--- a/product_registration.html
+++ b/product_registration.html
@@ -172,7 +172,7 @@
 
     <!-- ESCOLHA DO TIPO DE CADASTRO -->
     <section class="registration">
-      <h2>Cadastrar novo produto</h2>
+      <h2>Cadastro de novo produto</h2>
       <div class="form">
         <h5 class="product">O que você deseja cadastrar?</h5>
         <div class="produto-tipo" id="produto-tipo">
