--- a/reports_product.html
+++ b/reports_product.html
@@ -137,8 +137,7 @@
 <section class="content-table">
   <header class="bar-status">
     <div class="welcome">    
-      <h1 id="hello">Olá Taila,</h1>
-      <h1>seja bem-vinda(o)!</h1>
+      <h1 id="hello">Relatórios de Produtos</h1>
     </div>
     <ul class="bar-login">
       <li id="usuario">
@@ -163,7 +162,6 @@
         </header>
 
         <section class="report">
-          <h2>Relatórios de produtos</h2>
           <div class="graphics-double">  
             <canvas id="grafico"></canvas>
             <canvas id="grafico2"></canvas> 
