--- a/reports_product.html
+++ b/reports_product.html
@@ -137,7 +137,7 @@
 <section class="content-table">
   <header class="bar-status">
     <div class="welcome">    
-      <h1 id="hello">Relatórios de Produtos</h1>
+      <h1 id="hello">Relatórios</h1>
     </div>
     <ul class="bar-login">
       <li id="usuario">
@@ -162,6 +162,7 @@
         </header>
 
         <section class="report">
+          <h2>Relatórios de produtos</h2>
           <div class="graphics-double">  
             <canvas id="grafico"></canvas>
             <canvas id="grafico2"></canvas> 
