correção do titulo

--- a/prop.html
+++ b/prop.html
@@ -136,8 +136,7 @@
           <section class="content-table">
             <header class="bar-status">
               <div class="welcome">    
-                <h1 id="hello">Olá Taila,</h1>
-                <h1>seja bem-vinda(o)!</h1>
+                <h1 id="hello">Suporte</h1>
               </div>
               <ul class="bar-login">
                 <li id="usuario">
