correção dos textos

--- a/production_management.html
+++ b/production_management.html
@@ -174,7 +174,7 @@
 
           <!--Título da tela-->
           <section class="section-title" id="a">
-            <h2 >Gerenciamento da produção</h2>
+            <h2 >Gerenciamento das produções</h2>
           </section>
 
           <!--Tabela -> Gerenciamento de Produtos-->
