--- a/user_management.html
+++ b/user_management.html
@@ -169,7 +169,7 @@
         
         <!--Título da tela-->
         <section class="section-title">
-          <h2>Gerenciamento de usuário</h2>   
+          <h2>Gerenciamento de usuários</h2>   
         </section>
 
         <!--Tabela -> Gerenciamento de Usuarios-->
