--- a/user_registration.html
+++ b/user_registration.html
@@ -164,7 +164,7 @@
           </ul>
         </header>
         <section class="registration">
-            <h2>Cadastro de Usuário</h2>
+            <h2>Cadastro de Usuários</h2>
                 <div class="form">
                   <div class="user-email">
                     <label for="">Nome
