inserindo icons e border bottom em todas as telas

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
         <ul class="list-unstyled ps-0">
           <li class="mb-1">
             <div class="sidebar-logo">
-              <h6><a href="home.html" id="home"> SysUnity</a></h6>
+              <h6><a href="home.html" id="home-logo"> SysUnity</a></h6>
             </div>
           </li>
           <li class="mb-1">
@@ -164,7 +164,12 @@
           </ul>
         </header>
         <section class="section-table">
-          <h2>Encomendas</h2>
+          <div class="title">
+            <h2>Encomendas</h2>
+            <a  href="">
+              <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
+            </a> 
+          </div>          
           <table class="table">
             <tbody>
               <tr>
@@ -186,7 +191,12 @@
 
         <!--Tabela Validade dos Produtos-->
         <section class="section-table" >
-          <h2>Validade dos Produtos</h2>
+          <div class="title">
+            <h2>Validade dos Produtos</h2>
+            <a  href="">
+              <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
+            </a> 
+          </div>
           <table class="table">
             <tbody>
               <tr>
