--- a/product_management.html
+++ b/product_management.html
@@ -172,7 +172,12 @@
 
         <!--Título da tela-->
         <section class="section-title">
-          <h2>Gerenciamento de produtos</h2>   
+          <div class="title">
+            <h2>Gerenciamento de produtos</h2>   
+            <a  href="">
+              <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
+            </a> 
+          </div>
         </section>
 
         <!--Tabela -> Gerenciamento de Produtos-->
