--- a/user_management.html
+++ b/user_management.html
@@ -32,7 +32,7 @@
         <ul class="list-unstyled ps-0">
           <li class="mb-1">
             <div class="sidebar-logo">
-              <h6><a href="home.html" id="home"> SysUnity</a></h6>
+              <h6><a href="home.html" id="home-logo"> SysUnity</a></h6>
             </div>
           </li>
           <li class="mb-1">
@@ -171,7 +171,12 @@
         
         <!--Título da tela-->
         <section class="section-title">
-          <h2>Gerenciamento de usuário</h2>   
+          <div class="title">
+            <h2>Gerenciamento de usuário</h2>   
+            <a  href="">
+              <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
+            </a> 
+          </div>
         </section>
 
         <!--Tabela -> Gerenciamento de Usuarios-->
