--- a/user_registration.html
+++ b/user_registration.html
@@ -29,7 +29,7 @@
         <ul class="list-unstyled ps-0">
           <li class="mb-1">
             <div class="sidebar-logo">
-              <h6><a href="home.html" id="home">SysUnity</a></h6>
+              <h6><a href="home.html"  id="home-logo">SysUnity</a></h6>
             </div>
           </li>
           <li class="mb-1">
@@ -63,7 +63,7 @@
           <li class="mb-1">
             <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
               <div class="set1">
-                <img src="./images/baseline_inventory_2_white_48dp.png" alt="" width="22">
+                <img src="./images/baseline_inventory_2_white_48dp.png" alt="" width="22" >
                 <span>Produtos</span>
               </div>
             </button>
@@ -125,7 +125,7 @@
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
                 <div class="set1">
-                  <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
+                  <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22" >
                   <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
                 </div>
               </button>
@@ -166,7 +166,12 @@
           </ul>
         </header>
         <section class="registration">
-            <h2>Cadastro de Usuário</h2>
+            <div class="title">
+              <h2>Cadastro de Usuário</h2>
+                <a  href="">
+                  <img src="images/help_center_black_24dp.svg" alt="help" class="filter-color_icon">
+                </a>          
+            </div>            
                 <div class="form">
                   <div class="user-email">
                     <label for="">Nome
